--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,12 +7,11 @@
     <string name="nav_header_desc">Navigation header</string>
     <string name="action_settings">Settings</string>
 
-    <string name="menu_home">Home</string>
-    <string name="menu_gallery">Gallery</string>
-    <string name="menu_slideshow">Slideshow</string>
+    <string name="gallery">Gallery</string>
     <string name="album">Album</string>
     <string name="camera">Camera</string>
     <string name="hidden">Hidden</string>
     <string name="locked">Locked</string>
     <string name="setting">Setting</string>
+    <string name="favourites">Favourites</string>
 </resources>
