--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,11 +1,5 @@
 <resources>
     <string name="app_name">GalleryApp</string>
-    <string name="navigation_drawer_open">Open navigation drawer</string>
-    <string name="navigation_drawer_close">Close navigation drawer</string>
-    <string name="nav_header_title">Android Studio</string>
-    <string name="nav_header_subtitle">android.studio@android.com</string>
-    <string name="nav_header_desc">Navigation header</string>
-    <string name="action_settings">Settings</string>
 
     <string name="gallery">Gallery</string>
     <string name="album">Album</string>
@@ -14,4 +8,8 @@
     <string name="locked">Locked</string>
     <string name="setting">Setting</string>
     <string name="favourites">Favourites</string>
+    <string name="name">Name:</string>
+    <string name="created_date">Created Date:</string>
+    <string name="modified_date">Modified Date:</string>
+    <string name="size">Size:</string>
 </resources>
