crop image (unfinished)

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,4 +14,11 @@
     <string name="locked">Locked</string>
     <string name="setting">Setting</string>
     <string name="favourites">Favourites</string>
+
+    <string name="cancel">Cancel</string>
+    <string name="save">Save</string>
+    <string name="saving_image">saving images</string>
+    <string name="preparing_card">preparing card</string>
+    <string name="no_storage_card">No SD Card</string>
+    <string name="not_enough_space">Not enough space</string>
 </resources>
