--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,7 +6,7 @@
     <string name="camera">Camera</string>
     <string name="hidden">Hidden</string>
     <string name="locked">Locked</string>
-    <string name="setting">Setting</string>
+    <string name="settings">Settings</string>
     <string name="favourites">Favourites</string>
 
     <string name="cancel">Cancel</string>
