--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">GalleryApp</string>
+    <string name="app_name">Gallery</string>
 
     <string name="gallery">Gallery</string>
     <string name="album">Album</string>
