--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -19,4 +19,5 @@
     <string name="created_date">Created Date</string>
     <string name="modified_date">Modified Date</string>
     <string name="size">Size</string>
+    <string name="picture_search_hint">Enter picture name or date</string>
 </resources>
