--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -27,4 +27,5 @@
     <string name="up_icon">▲</string>
     <string name="down_icon">▼</string>
     <string name="sort_type">Sort Type</string>
+    <string name="filters">Filters</string>
 </resources>
