--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -35,4 +35,5 @@
     <string name="share">Share</string>
     <string name="delete">Delete</string>
     <string name="details">Details</string>
+    <string name="folders">Folders</string>
 </resources>
