--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -36,4 +36,5 @@
     <string name="delete">Delete</string>
     <string name="details">Details</string>
     <string name="folders">Folders</string>
+    <string name="create_new_album">Create new Album</string>
 </resources>
