--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -37,4 +37,5 @@
     <string name="details">Details</string>
     <string name="folders">Folders</string>
     <string name="create_new_album">Create new Album</string>
+    <string name="add_to_album">Add to Album</string>
 </resources>
