--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,6 +9,9 @@
     <string name="settings">Settings</string>
     <string name="favourites">Favourites</string>
 
+    <string name="choose_album">Choose albums</string>
+    <string name="ok">OK</string>
+    <string name="image_information">Image Information</string>
     <string name="cancel">Cancel</string>
     <string name="save">Save</string>
     <string name="saving_image">saving images</string>
@@ -38,4 +41,12 @@
     <string name="folders">Folders</string>
     <string name="create_new_album">Create new Album</string>
     <string name="add_to_album">Add to Album</string>
+
+    <string name="path">Path</string>
+    <string name="type">Type</string>
+    <string name="uri">URI</string>
+    <string name="close">Close</string>
+
+
+
 </resources>
