--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -46,7 +46,7 @@
     <string name="type">Type</string>
     <string name="uri">URI</string>
     <string name="close">Close</string>
-
+    <string name="add_to_favorites">Add to Favorites</string>
 
 
 </resources>
