--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,6 +11,7 @@
 
     <string name="choose_album">Choose albums</string>
     <string name="ok">OK</string>
+    <string name="image_delete">Delete image</string>
     <string name="image_information">Image Information</string>
     <string name="cancel">Cancel</string>
     <string name="save">Save</string>
@@ -45,6 +46,7 @@
     <string name="path">Path</string>
     <string name="type">Type</string>
     <string name="uri">URI</string>
+    <string name="Yes">Yes</string>
     <string name="close">Close</string>
     <string name="add_to_favorites">Add to Favorites</string>
 
