--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -49,6 +49,7 @@
     <string name="Yes">Yes</string>
     <string name="close">Close</string>
     <string name="add_to_favorites">Add to Favorites</string>
+    <string name="input_password">Enter Your Password</string>
 
 
 </resources>
