--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,7 +11,7 @@
 
     <string name="choose_album">Choose albums</string>
     <string name="ok">OK</string>
-    <string name="image_delete">Delete image</string>
+    <string name="lock_image">Lock image</string>
     <string name="image_information">Image Information</string>
     <string name="cancel">Cancel</string>
     <string name="save">Save</string>
